--- a/style.css
+++ b/style.css
@@ -1,37 +1,86 @@
-/* class selector - .classname ( dot ) */
-/* parent element */
-
-body {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+*,
+*::after,
+*::before {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .container {
-  /* width: 100%; */
   display: flex;
-  justify-content: center;
-  border: 1px solid blueviolet;
-  border-radius: 1rem;
+  width: 100%;
+  height: 100vh;
 }
 
 .left {
-  padding-right: 2rem;
+  flex-basis: 50%;
 }
 
-.img {
-  border-radius: 50%;
-  border: 1px solid red;
+.avatar {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .right {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  flex-basis: 50%;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  background-color: #f1e2d7;
+}
 
-  width: 30%;
+.box {
+  padding: 1rem 4rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 1rem;
+}
+
+.subtitle {
+  text-transform: uppercase;
+  font-size: 1rem;
+  color: gray;
+}
+
+.title {
+  text-transform: capitalize;
+  font-weight: 300;
+  margin-block: 1rem;
+}
+
+.bold {
+  font-weight: 500;
+}
+
+.para {
+  color: gray;
+}
+
+.list {
+  font-size: 1.1rem;
+  margin-left: 1.5rem;
+  color: gray;
+}
+
+.cta {
+  display: inline-block;
+  padding: 0.75rem 2rem;
+  width: fit-content;
+  /* background-color: red; */
+  border: 3px solid black;
+  border-radius: 5rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  text-decoration: none;
+  color: black;
+  transition: all 0.4s ease-in-out;
+}
+
+.cta:hover {
+  background-color: #e3ae58;
+  border-color: #e3ae58;
+  color: white;
 }
