--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,18 @@
           box-sizing: border-box;
 }
 
+body {
+  font-family: nunito;
+}
+
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+}
+
+.container--fluid {
   height: 100vh;
 }
 
@@ -34,6 +41,10 @@
   background-color: #e3ae58;
   border-color: #e3ae58;
   color: white;
+}
+
+.bold {
+  font-weight: 900;
 }
 
 .avatar {
@@ -90,5 +101,135 @@
 
 .hero__list {
   margin-left: 1.25rem;
+}
+
+.skills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: wrap row;
+          flex-flow: wrap row;
+}
+
+.skills__meta {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 1rem 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.skills__title {
+  font-size: 2.5rem;
+  font-weight: 300;
+}
+
+.skills__title--white {
+  color: white;
+}
+
+.skills__subtitle {
+  color: #e3ae57;
+  font-size: 1rem;
+  font-weight: normal;
+  margin: 2rem 0;
+}
+
+.skills__subtitle--white {
+  color: white;
+  margin: 0 0 2rem 0;
+}
+
+.skills__para {
+  color: gray;
+}
+
+.skills__para:nth-of-type(even) {
+  margin-top: 1rem;
+}
+
+.skills__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  background-color: #e3ae57;
+}
+
+.skills__img-box {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+}
+
+.skills__img {
+  width: 100%;
+  display: block;
+}
+
+.skills__block {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 2rem;
+}
+
+.skill {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.skill__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.skill__row:nth-of-type(1) {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 0.8rem;
+}
+
+.skill__row:nth-of-type(2) {
+  position: relative;
+}
+
+.skill__count {
+  color: white;
+  font-weight: 400;
+}
+
+.skill__progress {
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  position: relative;
+}
+
+.skill__filled {
+  width: 10px;
+  height: 2px;
+  background-color: black;
+  position: absolute;
 }
 /*# sourceMappingURL=styles.css.map */
