--- a/styles.scss
+++ b/styles.scss
@@ -6,11 +6,17 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  font-family: nunito;
+}
 
 .container {
   display: flex;
   width: 100%;
-  height: 100vh;
+
+  &--fluid {
+    height: 100vh;
+  }
 }
 
 .cta {
@@ -29,6 +35,10 @@
     border-color: #e3ae58;
     color: white;
   }
+}
+
+.bold {
+  font-weight: 900;
 }
 
 // block specific styles
@@ -73,5 +83,114 @@
 
   &__list {
     margin-left: 1.25rem;
+  }
+}
+
+// skills section start
+$color-yellow: #e3ae57;
+
+.skills {
+  display: flex;
+  width: 100%;
+  flex-flow: wrap row;
+
+  &__meta {
+    flex: 1 1 50%;
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__title {
+    font-size: 2.5rem;
+    font-weight: 300;
+
+    &--white {
+      color: white;
+    }
+  }
+
+  &__subtitle {
+    color: $color-yellow;
+    font-size: 1rem;
+    font-weight: normal;
+    margin: 2rem 0;
+
+    &--white {
+      color: white;
+      margin: 0 0 2rem 0; // top right bottom left
+    }
+  }
+
+  &__para {
+    color: gray;
+
+    &:nth-of-type(even) {
+      margin-top: 1rem;
+    }
+  }
+
+  &__right {
+    display: flex;
+    flex: 1 1 50%;
+    background-color: $color-yellow;
+  }
+
+  &__img-box {
+    flex: 1 1 50%;
+  }
+
+  &__img {
+    width: 100%;
+    display: block;
+  }
+
+  &__block {
+    flex: 1 1 50%;
+    padding: 2rem;
+  }
+}
+
+.skill {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+
+  margin-bottom: 1.5rem;
+
+  // &:not(:last-child) {
+  //   border-bottom: 5px solid gray;
+  // }
+
+  &__row {
+    display: flex;
+
+    &:nth-of-type(1) {
+      justify-content: space-between;
+      font-size: 0.8rem;
+    }
+
+    &:nth-of-type(2) {
+      position: relative;
+    }
+  }
+
+  &__count {
+    color: white;
+    font-weight: 400;
+  }
+
+  &__progress {
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    position: relative;
+  }
+
+  &__filled {
+    width: 10px;
+    height: 2px;
+    background-color: black;
+    position: absolute;
   }
 }
