--- a/styles.css
+++ b/styles.css
@@ -232,4 +232,145 @@ body {
   background-color: black;
   position: absolute;
 }
+
+.exp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 450px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: wrap row;
+          flex-flow: wrap row;
+}
+
+.exp--left {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.exp--right {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.exp__img-box, .exp__info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  height: 100%;
+}
+
+.exp__img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.exp__info {
+  padding: 3rem;
+  color: white;
+}
+
+.exp__info--brown {
+  background: #e9754e;
+}
+
+.exp__info--yellow {
+  background-color: #e3ae58;
+}
+
+.exp__title {
+  font-weight: 300;
+  font-size: 2.5rem;
+}
+
+.exp__subtitle {
+  font-weight: 300;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+}
+
+.exp__list {
+  list-style: none;
+}
+
+.exp__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+
+.exp__icon i {
+  font-size: 2rem;
+}
+
+.exp__heading {
+  font-weight: 300;
+  font-size: 1.6rem;
+}
+
+.exp__dates {
+  color: #673333;
+  font-size: 1rem;
+  font-weight: 800;
+}
+
+.exp__desc {
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.quote {
+  height: 400px;
+  width: 100%;
+  color: white;
+}
+
+.quote__box {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 2rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.quote__icon {
+  font-size: 3rem;
+}
+
+.quote__text {
+  font-size: 2rem;
+  max-width: 70%;
+  text-align: center;
+}
 /*# sourceMappingURL=styles.css.map */
