--- a/styles.scss
+++ b/styles.scss
@@ -194,3 +194,122 @@ $color-yellow: #e3ae57;
     position: absolute;
   }
 }
+
+// skills section end
+
+// my background section start
+
+.exp {
+  display: flex;
+  width: 100%;
+  height: 450px;
+  flex-flow: wrap row;
+
+  &--left {
+    flex-direction: row;
+  }
+
+  &--right {
+    flex-direction: row-reverse;
+  }
+
+  &__img-box,
+  &__info {
+    flex: 1 1 50%;
+    height: 100%;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+  }
+
+  &__info {
+    padding: 3rem;
+    color: white;
+
+    &--brown {
+      background: hsl(15, 78%, 61%);
+    }
+
+    &--yellow {
+      background-color: #e3ae58;
+    }
+  }
+
+  &__title {
+    font-weight: 300;
+    font-size: 2.5rem;
+  }
+
+  &__subtitle {
+    font-weight: 300;
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+  }
+
+  &__list {
+    list-style: none;
+  }
+
+  &__item {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-start;
+    gap: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  &__icon i {
+    font-size: 2rem;
+  }
+
+  &__heading {
+    font-weight: 300;
+    font-size: 1.6rem;
+  }
+
+  &__dates {
+    color: #673333;
+    font-size: 1rem;
+    font-weight: 800;
+  }
+
+  &__desc {
+    margin-top: 0.5rem;
+    font-size: 1rem;
+    font-weight: 300;
+  }
+}
+
+// my background section end
+
+// quote section start
+.quote {
+  height: 400px;
+  width: 100%;
+  color: white;
+
+  &__box {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__icon {
+    font-size: 3rem;
+  }
+
+  &__text {
+    font-size: 2rem;
+    max-width: 70%;
+    text-align: center;
+  }
+}
