--- a/styles.css
+++ b/styles.css
@@ -373,4 +373,105 @@ body {
   max-width: 70%;
   text-align: center;
 }
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 4.25rem;
+  background-color: white;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 6rem;
+  position: fixed;
+  z-index: 9;
+  -webkit-box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.1);
+}
+
+.header__link {
+  font-size: 2rem;
+  text-decoration: none;
+  color: black;
+  font-weight: 700;
+}
+
+.header__nav {
+  width: 100%;
+}
+
+.header__list {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.header__nav-link {
+  font-size: 0.75rem;
+  padding: 0 1rem;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: black;
+  -webkit-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+}
+
+.header__nav-link:hover {
+  color: #e3ae57;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+  padding: 10rem 0;
+  color: gray;
+}
+
+.footer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+.footer__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-decoration: none;
+}
+
+.footer__link > i {
+  padding: 1.25rem;
+  color: gray;
+}
+
+.footer__link > i:hover {
+  border-radius: 50%;
+  background: #e3ae57;
+  color: white;
+}
 /*# sourceMappingURL=styles.css.map */
