--- a/styles.css
+++ b/styles.css
@@ -374,21 +374,25 @@ body {
   text-align: center;
 }
 
+.scroll-down {
+  -webkit-box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.1);
+  background-color: white !important;
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 4.25rem;
-  background-color: white;
+  background-color: transparent;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   padding: 0 6rem;
   position: fixed;
   z-index: 9;
-  -webkit-box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.1);
 }
 
 .header__link {
@@ -472,6 +476,186 @@ body {
 .footer__link > i:hover {
   border-radius: 50%;
   background: #e3ae57;
+  color: white;
+}
+
+.contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 75vh;
+}
+
+.contact__form {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+}
+
+.contact__right {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #161616;
+  color: white;
+}
+
+.contact__img-box {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+}
+
+.contact__info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2rem;
+}
+
+.contact__title {
+  font-weight: 300;
+  font-size: 1.5rem;
+}
+
+.contact__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.contact__list {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.75rem;
+}
+
+.contact__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
+}
+
+.contact__item i {
+  font-size: 1rem;
+}
+
+.contact__link {
+  color: #e3ae57;
+  text-decoration: none;
+  font-size: 0.75rem;
+  font-weight: 300;
+  letter-spacing: 1.25px;
+}
+
+.contact__heading {
+  font-size: 1.5rem;
+  font-weight: 200;
+}
+
+.contact__address {
+  font-size: 0.9rem;
+  font-weight: 100;
+  font-style: normal;
+  color: #888;
+}
+
+.contact__form {
+  background: #e9724c;
+  padding: 2rem;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+.contact__main-title {
+  font-size: 2rem;
+  font-weight: 300;
+  margin-bottom: 2rem;
+}
+
+.contact__input, .contact__textarea {
+  background: transparent;
+  border: none;
+  padding: 0.75rem 1rem;
+  border-bottom: 1px solid #e3ae57;
+  color: white;
+}
+
+.contact__input::-webkit-input-placeholder, .contact__textarea::-webkit-input-placeholder {
+  color: white;
+  text-transform: capitalize;
+}
+
+.contact__input:-ms-input-placeholder, .contact__textarea:-ms-input-placeholder {
+  color: white;
+  text-transform: capitalize;
+}
+
+.contact__input::-ms-input-placeholder, .contact__textarea::-ms-input-placeholder {
+  color: white;
+  text-transform: capitalize;
+}
+
+.contact__input::placeholder, .contact__textarea::placeholder {
+  color: white;
+  text-transform: capitalize;
+}
+
+.contact__input:focus, .contact__textarea:focus {
+  outline: none;
+  border-bottom-color: white;
+}
+
+.contact__textarea {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.contact__btn {
+  background: white;
+  border-radius: 5rem;
+  padding: 0.75rem 7.5rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  border: 1px solid white;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.contact__btn:hover {
+  background: transparent;
   color: white;
 }
 /*# sourceMappingURL=styles.css.map */
