--- a/styles.scss
+++ b/styles.scss
@@ -8,6 +8,10 @@
 }
 body {
   font-family: nunito;
+
+  @media (max-width: 768px) {
+    font-size: 14px;
+  }
 }
 
 .container {
@@ -42,19 +46,30 @@ body {
 }
 
 // block specific styles
-.avatar {
-  flex: 1 1 50%;
-
-  &__img {
-    width: 100%;
-    object-fit: cover;
-  }
-}
 
 .hero {
   flex: 1 1 50%;
   font-family: nunito;
   background-color: #f1e2d7;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    height: auto;
+  }
+
+  &__avatar {
+    flex: 1 1 50%;
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  &__right {
+    flex: 1 1 50%;
+  }
 
   &__box {
     display: flex;
@@ -63,6 +78,10 @@ body {
     height: 100%;
     padding: 0 3rem;
     gap: 1rem;
+
+    @media (max-width: 768px) {
+      padding: 2rem;
+    }
   }
 
   &__subtitle {
@@ -94,11 +113,20 @@ $color-yellow: #e3ae57;
   width: 100%;
   flex-flow: wrap row;
 
+  @media (max-width: 768px) {
+    flex-flow: column nowrap;
+    height: auto;
+  }
+
   &__meta {
     flex: 1 1 50%;
     padding: 1rem 2rem;
     display: flex;
     flex-direction: column;
+
+    @media (max-width: 768px) {
+      padding: 2rem;
+    }
   }
 
   &__title {
@@ -134,6 +162,11 @@ $color-yellow: #e3ae57;
     display: flex;
     flex: 1 1 50%;
     background-color: $color-yellow;
+
+    @media (max-width: 768px) {
+      flex-flow: column nowrap;
+      // height: auto;
+    }
   }
 
   &__img-box {
@@ -142,7 +175,14 @@ $color-yellow: #e3ae57;
 
   &__img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     display: block;
+
+    @media (max-width: 768px) {
+      min-height: 65vh;
+      max-height: 75vh;
+    }
   }
 
   &__block {
@@ -205,12 +245,26 @@ $color-yellow: #e3ae57;
   height: 450px;
   flex-flow: wrap row;
 
+  @media (max-width: 768px) {
+    flex-flow: column nowrap;
+    height: auto;
+  }
+
   &--left {
     flex-direction: row;
+
+    @media (max-width: 768px) {
+      flex-flow: column nowrap;
+      height: auto;
+    }
   }
 
   &--right {
     flex-direction: row-reverse;
+
+    @media (max-width: 768px) {
+      flex-flow: column-reverse nowrap;
+    }
   }
 
   &__img-box,
@@ -224,11 +278,20 @@ $color-yellow: #e3ae57;
     height: 100%;
     display: block;
     object-fit: cover;
+
+    @media (max-width: 768px) {
+      min-height: 65vh;
+      max-height: 75vh;
+    }
   }
 
   &__info {
     padding: 3rem;
     color: white;
+
+    @media screen and (max-width: 1070px) {
+      padding: 2rem;
+    }
 
     &--brown {
       background: hsl(15, 78%, 61%);
@@ -324,6 +387,10 @@ $color-yellow: #e3ae57;
   background-color: white !important;
 }
 
+.header__nav--active {
+  display: flex !important;
+}
+
 .header {
   display: flex;
   width: 100%;
@@ -333,6 +400,23 @@ $color-yellow: #e3ae57;
   padding: 0 6rem;
   position: fixed;
   z-index: 9;
+
+  @media (max-width: 768px) {
+    flex-wrap: wrap;
+    padding: 0 3rem;
+    height: auto;
+  }
+
+  &__button {
+    display: none;
+    padding: 1rem;
+    cursor: pointer;
+
+    @media (max-width: 768px) {
+      display: block;
+      margin-left: auto;
+    }
+  }
 
   &__link {
     font-size: 2rem;
@@ -344,12 +428,25 @@ $color-yellow: #e3ae57;
   &__nav {
     // display: flex;
     width: 100%;
+    justify-content: flex-end;
+
+    @media (max-width: 768px) {
+      flex: 1 0 100%;
+      display: none;
+      justify-content: flex-start;
+    }
   }
 
   &__list {
     list-style: none;
     display: flex;
     justify-content: flex-end;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      gap: 1.5rem;
+      padding: 1.5rem 0;
+    }
   }
 
   &__nav-link {
@@ -360,6 +457,11 @@ $color-yellow: #e3ae57;
     text-transform: uppercase;
     color: black;
     transition: color 0.3s ease;
+
+    @media (max-width: 768px) {
+      flex: 1 0 100%;
+      padding: 1rem 0;
+    }
 
     &:hover {
       color: #e3ae57;
@@ -377,6 +479,10 @@ $color-yellow: #e3ae57;
   gap: 2rem;
   padding: 10rem 0;
   color: gray;
+
+  @media (max-width: 768px) {
+    padding: 5rem 1rem;
+  }
 
   &__list {
     display: flex;
@@ -396,6 +502,7 @@ $color-yellow: #e3ae57;
     color: gray;
     // width: 1.25rem;
     // height: 1.25rem;
+    transition: all 0.3s ease;
 
     &:hover {
       border-radius: 50%;
@@ -414,6 +521,11 @@ $color-yellow: #e3ae57;
   width: 100%;
   height: 75vh;
 
+  @media (max-width: 768px) {
+    flex-direction: column;
+    height: auto;
+  }
+
   &__form {
     flex: 1 1 50%;
   }
@@ -423,6 +535,11 @@ $color-yellow: #e3ae57;
     display: flex;
     background: #161616;
     color: white;
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+      height: auto;
+    }
   }
 
   &__img-box {
@@ -446,6 +563,11 @@ $color-yellow: #e3ae57;
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+    @media (max-width: 768px) {
+      min-height: 65vh;
+      max-height: 75vh;
+    }
   }
 
   &__list {
